# whohome

./: .gitignore  flake.nix  libtelnet.patch  whohome.cabal  whohome.service  whohome.timer
app/: Config.hs  Main.hs  ParseMACs.hs  TelnetSimple.hs
