cabal-version: 3.4
name:          whohome
version:       0.1.0.0

-- synopsis:
-- description:
homepage:      https://github.com/kostava44/whohome
license:       AGPL-3.0-or-later
license-file:  LICENSE
author:        wldhx

-- maintainer:
-- copyright:
category:      Network
build-type:    Simple

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable whohome
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Config
    ParseMACs
    TelnetSimple

  -- other-extensions:
  build-depends:
    , aeson
    , async
    , base                  ^>=4.17.0.0
    , bytestring
    , libtelnet
    , megaparsec
    , monad-loops
    , network-simple
    , stm
    , text
    , unordered-containers

  hs-source-dirs:   app
  default-language: GHC2021
